# prett

./: .gitignore  CMakeLists.txt  README.md
include/prett/: color.hpp
src/: color.cpp  main.cpp
